# poly-blksch

./: .env.example  .gitignore  ARCHITECTURE.md  CATALOG.md  HANDOFF.md  README.md  SESSION_RESUME.md  pyproject.toml
config/: README.md  bot.yaml  markets.yaml
scripts/: README.md  calibration_dryrun.py  fit_k_from_ledger.py  live_ro_auth_check.py  paper_soak.py  reconcile_drill.py  record_contract_fixtures.py  signing_canary.py
src/blksch/: README.md  __init__.py  app.py  schemas.py
tests/: README.md  conftest.py
tests/contract/: README.md  test_clob_client_contract.py  test_clob_client_testnet_contract.py  test_polyclient_contracts.py
tests/fixtures/: README.md  synthetic.py
tests/integration/: test_app_wiring.py  test_calibration_dryrun_offline.py  test_cross_track_wiring.py  test_hedge_ablation.py  test_hedge_stack_live_flags.py  test_limits_adversarial.py  test_pnl_reconciliation.py  test_track_a_calibration.py  test_track_b_calendar_hedge.py  test_track_b_hedge.py  test_track_b_quote.py  test_track_b_synth_strip.py  test_track_c_paper_engine.py
tests/live_ro/: README.md  test_polyclient_live_smoke.py
tests/pipeline/: gate_sweep_reference.json  test_kill_switch.py  test_live_paper_trade.py  test_paper_sec6_replication.py
tests/unit/: test_calibration_dryrun.py  test_canonical_mid.py  test_clob_client.py  test_corr.py  test_diagnostics.py  test_em_increments.py  test_em_jumps.py  test_ewma_var.py  test_exec_dashboard.py  test_exec_fit_k.py  test_exec_reconcile_drill.py  test_exec_scripts.py  test_exec_soak_harness.py  test_greeks.py  test_guards.py  test_hedge_beta.py  test_hedge_calendar.py  test_hedge_synth_strip.py  test_kalman.py  test_ledger.py  test_limits.py  test_microstruct.py  test_order_router.py  (+12 more)
(+90 files in other folders)
