[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blksch"
version = "0.0.1"
description = "Polymarket market-making bot implementing the RN logit jump-diffusion kernel (Dalen 2026)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Quinn Buckner", email = "quinnbuckner2@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "pyarrow>=15",
  "filterpy>=1.4.5",
  "aiohttp>=3.9",
  "websockets>=12",
  "web3>=6.15",
  "eth-account>=0.11",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich>=13.7",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.8",
  "hypothesis>=6.100",
]
clob = [
  "py-clob-client>=0.17",
]

[project.scripts]
blksch = "blksch.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "unit: fast, pure-math tests (default in CI)",
  "integration: per-track tests with fixtures (CI)",
  "pipeline: end-to-end, may run minutes (nightly / pre-promotion)",
  "contract: pinned against recorded Polymarket responses (CI, offline)",
  "live_ro: hits live Polymarket read-only endpoints (manual; skip by default)",
  "canary: live signed endpoints with tiny size (manual; gate for Stage 2)",
  "slow: > 30 seconds; excluded from fast CI",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
